labs/demo/openshift-networking/networkpolicies/anp/kubeapi-egress-guardrail.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: kubeapi-egress-guardrail
spec:
  priority: 13


  subject:
    namespaces:
      matchLabels:
        security.allow/kapi: "true"

  #subject:
  #  pods:
  #    podSelector:
  #      matchLabels:
  #        security.allow/kapi: "true"

  egress:
    - name: allow-kubeapi-for-approved-workloads
      action: Allow
      to:
        - nodes:
            matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
      ports:
        - portNumber:
            protocol: TCP
            port: 6443
